--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: blue;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP7ulEolbTE1dGYyqBM8-wtDX7E4QJwC5RSlcy8dIVKwphgD6gvg&s)
 }
 
 h1 {
