--- a/style.css
+++ b/style.css
@@ -6,28 +6,54 @@ body {
 
 h1 {
     text-align: center;
-    background-color: rgb(225, 65, 185);
+    background-color: rgb(146, 164, 184);
     height: auto;
     margin: auto;
     color: white;
 }
 
-p {
+.para {
     text-align: center;
+    padding: 5px;
+    background-color: white;
+    max-width: 250px;
+    height: auto;
+    margin: 1% auto;
+    font-size: larger;
+}
+
+.btn {
+    display: block;
+    margin: 1% auto;
+    width: 200px;
+    height: 80px;
+    font-size: larger;
+    background-color: #777;
+    color: white;
+}
+
+ol {
     padding: 15px;
     background-color: white;
     width: 200px;
     height: auto;
     margin: 3% auto;
     font-size: larger;
+    list-style-position: inside;
 }
 
-.btn {
-    display: block;
-    margin: 10% auto;
-    width: 200px;
-    height: 30px;
+ol li {
+    background: #bbcceb;
+    margin: 5px;
+}
+
+div {
+    background-color: white;
     font-size: larger;
-    background-color: #777;
-    color: white;
+    max-width: 100%;
+    padding-left: 20px;
+}
+
+div h2 {
+    text-align: center;
 }
